@@ -1,3 +1,7 @@
+2004-02-23  Julio M Merino Vidal <jmmv@menta.net>
+                                                                                
+        * Makefile.am: honour gconf configure option
+                                                                                
 2004-01-18  Jason Leach  <leach@wam.umd.edu>
 
 	* Makefile.am (schema_source_data): builddir != srcdir fix.
